@@ -46,6 +46,10 @@ Some options can be specified on the command line:
 .IP -m4-prefix
 I think this makes all the m4 directives require the prefix "m4_".
 
+.IP -m4-prefix-defines
+Causes built-in defines to be prefixed with "m4_" (i.e., m4_HOME
+is defined instead of HOME, etc.)
+
 .TP
 -m4opt \fIoption\fP
 Lets you pass an option to the m4 program.  Not really needed as any
